# web-crawler

./: .env.example  .gitignore  Dockerfile  config.py  pyproject.toml  render.yaml
.github/workflows/: daily_ingest.yml
src/: api.py  chunker.py  cli.py  crawler.py  load_to_vector_db.py  query_kb.py  rag_engine.py  vector_db.py
src/utils/: chunk_utils.py  display.py  html_parser.py  http_utils.py  json_utils.py  markdown_utils.py  sitemap.py  text_utils.py  url_utils.py  validation.py
